--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sagamore.testapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TestApplication">
         <activity
-            android:name=".ItemListActivity"
+            android:name=".feature_main_list.ItemListActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.TestApplication.NoActionBar">
             <intent-filter>
@@ -20,13 +22,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ItemDetailActivity"
+            android:name=".feature_details.ItemDetailActivity"
             android:label="@string/title_item_detail"
-            android:parentActivityName=".ItemListActivity"
+            android:parentActivityName=".feature_main_list.ItemListActivity"
             android:theme="@style/Theme.TestApplication.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.sagamore.testapplication.ItemListActivity" />
+                android:value="com.sagamore.testapplication.feature_main_list.ItemListActivity" />
         </activity>
     </application>
 
