--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -14,6 +14,7 @@
         <activity
             android:name=".feature_main_list.ItemListActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.TestApplication.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,10 +22,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".feature_details.ItemDetailActivity"
-            android:label="@string/title_item_detail"
+            android:label=""
+            android:parentActivityName=".feature_employee_list.EmployeeListActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.TestApplication.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sagamore.testapplication.feature_employee_list.EmployeeListActivity" />
+        </activity>
+
+        <activity
+            android:name=".feature_employee_list.EmployeeListActivity"
+            android:label="@string/title_employee"
             android:parentActivityName=".feature_main_list.ItemListActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.TestApplication.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
